src/com/bupt/ast/Go.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Go.java */
package com.bupt.ast;
import com.bupt.ast.*;

import java.io.FileInputStream;


public class Go/*@bgen(jjtree)*/implements GoTreeConstants, GoConstants {/*@bgen(jjtree)*/
  protected JJTGoState jjtree = new JJTGoState();


  public static void main(String args [])
  {
    Go parser;
    if (args.length == 0)
    {
        System.out.println("Reading from standard input...");
        System.out.print("Enter enter some Golang :");
        parser = new Go(System.in);
    }
    else if (args.length == 1)
    {
        System.out.println("Go Parser:  Reading from file " + args [0] + " . . .");
        try
         {
             parser = new Go(new FileInputStream(args [0]), "UTF-8");
         }
        catch (java.io.FileNotFoundException e)
         {
             System.out.println("Go Parser:  File " + args [0] + " not found.");
            return;
         }
    }
    else {
        System.out.println("Go Parser:  Usage is one of:");
        System.out.println("         Go < inputfile");
        System.out.println("OR");
        System.out.println("         Go inputfile");
        return;
    }
    try
    {
         SimpleNode n = parser.Program();
         n.dump("");

         System.out.println("Go parser:  Go program parsed successfully.");
    }
    catch (ParseException e)
    {
         System.out.println(e.getMessage());
         System.out.println("Go parser:  Encountered errors during parse.");
    }

  }

  final public int one_line() throws ParseException {
 /*@bgen(jjtree) one_line */
  ASTone_line jjtn000 = new ASTone_line(this, JJTONE_LINE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Statements();
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
        {if (true) return 0;}
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
    throw new Error("Missing return statement in function");
  }

  final public void sum() throws ParseException {
 /*@bgen(jjtree) sum */
  ASTsum jjtn000 = new ASTsum(this, JJTSUM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      term();
      label_1:
      while (true) {
        switch (jj_nt.kind) {
        case PLUS:
        case MINUS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch (jj_nt.kind) {
        case PLUS:
          jj_consume_token(PLUS);
          break;
        case MINUS:
          jj_consume_token(MINUS);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        term();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void term() throws ParseException {
 /*@bgen(jjtree) term */
  ASTterm jjtn000 = new ASTterm(this, JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      unary();
      label_2:
      while (true) {
        switch (jj_nt.kind) {
        case MULTIPLY:
        case DIVIDE:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        switch (jj_nt.kind) {
        case MULTIPLY:
          jj_consume_token(MULTIPLY);
          break;
        case DIVIDE:
          jj_consume_token(DIVIDE);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        unary();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void unary() throws ParseException {
 /*@bgen(jjtree) unary */
  ASTunary jjtn000 = new ASTunary(this, JJTUNARY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch (jj_nt.kind) {
      case MINUS:
        jj_consume_token(MINUS);
        element();
        break;
      case CONSTANT:
      case LP:
        element();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void element() throws ParseException {
 /*@bgen(jjtree) element */
  ASTelement jjtn000 = new ASTelement(this, JJTELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch (jj_nt.kind) {
      case CONSTANT:
        jj_consume_token(CONSTANT);
        break;
      case LP:
        jj_consume_token(LP);
        sum();
        jj_consume_token(RP);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void DeclarationStatement() throws ParseException {
 /*@bgen(jjtree) DeclarationStatement */
  ASTDeclarationStatement jjtn000 = new ASTDeclarationStatement(this, JJTDECLARATIONSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(4)) {
        jj_consume_token(VAR);
        jj_consume_token(INT);
        jj_consume_token(IDENTIFIER);
        Assignment();
        jj_consume_token(INTEGER_LITERAL);
      } else if (jj_2_2(4)) {
        jj_consume_token(VAR);
        jj_consume_token(FLOAT);
        jj_consume_token(IDENTIFIER);
        Assignment();
        jj_consume_token(FLOATING_POINT_LITERAL);
      } else if (jj_2_3(4)) {
        jj_consume_token(VAR);
        jj_consume_token(STRING);
        jj_consume_token(IDENTIFIER);
        Assignment();
        jj_consume_token(STRING_LITERAL);
      } else if (jj_2_4(4)) {
        jj_consume_token(VAR);
        jj_consume_token(CHAR);
        jj_consume_token(IDENTIFIER);
        Assignment();
        jj_consume_token(CHARACTER_LITERAL);
      } else {
        switch (jj_nt.kind) {
        case VAR:
          jj_consume_token(VAR);
          type();
          jj_consume_token(IDENTIFIER);
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void type() throws ParseException {
 /*@bgen(jjtree) type */
  ASTtype jjtn000 = new ASTtype(this, JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch (jj_nt.kind) {
      case INT:
        jj_consume_token(INT);
        break;
      case FLOAT:
        jj_consume_token(FLOAT);
        break;
      case STRING:
        jj_consume_token(STRING);
        break;
      case CHAR:
        jj_consume_token(CHAR);
        break;
      case BOOL:
        jj_consume_token(BOOL);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Assignment() throws ParseException {
                     /*@bgen(jjtree) Assignment */
  ASTAssignment jjtn000 = new ASTAssignment(this, JJTASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(EQL);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void AssignmentOperator() throws ParseException {
                            /*@bgen(jjtree) AssignmentOperator */
  ASTAssignmentOperator jjtn000 = new ASTAssignmentOperator(this, JJTASSIGNMENTOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch (jj_nt.kind) {
      case EQL:
        jj_consume_token(EQL);
        break;
      case 57:
        jj_consume_token(57);
        break;
      case 58:
        jj_consume_token(58);
        break;
      case 59:
        jj_consume_token(59);
        break;
      case 60:
        jj_consume_token(60);
        break;
      case 61:
        jj_consume_token(61);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void OneOperandOperator() throws ParseException {
                             /*@bgen(jjtree) OneOperandOperator */
  ASTOneOperandOperator jjtn000 = new ASTOneOperandOperator(this, JJTONEOPERANDOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch (jj_nt.kind) {
      case 62:
        jj_consume_token(62);
        break;
      case 63:
        jj_consume_token(63);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void IterationStatement() throws ParseException {
                             /*@bgen(jjtree) IterationStatement */
  ASTIterationStatement jjtn000 = new ASTIterationStatement(this, JJTITERATIONSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOR);
      if (jj_2_5(2)) {
        Condition();
      } else if (jj_2_6(2)) {
        switch (jj_nt.kind) {
        case IDENTIFIER:
          SimpleStatement();
          break;
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        jj_consume_token(SEMICOLON);
        switch (jj_nt.kind) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case CHARACTER_LITERAL:
        case STRING_LITERAL:
        case TRUE:
        case FALSE:
        case IDENTIFIER:
          Condition();
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
        jj_consume_token(SEMICOLON);
        switch (jj_nt.kind) {
        case IDENTIFIER:
          InCrement();
          break;
        default:
          jj_la1[12] = jj_gen;
          ;
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      Block();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void SimpleStatement() throws ParseException {
                         /*@bgen(jjtree) SimpleStatement */
  ASTSimpleStatement jjtn000 = new ASTSimpleStatement(this, JJTSIMPLESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(COLON);
      jj_consume_token(EQL);
      jj_consume_token(INTEGER_LITERAL);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ConditionalStatement() throws ParseException {
                               /*@bgen(jjtree) ConditionalStatement */
  ASTConditionalStatement jjtn000 = new ASTConditionalStatement(this, JJTCONDITIONALSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      label_3:
      while (true) {
        switch (jj_nt.kind) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case CHARACTER_LITERAL:
        case STRING_LITERAL:
        case TRUE:
        case FALSE:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_3;
        }
        Condition();
      }
      Block();
      switch (jj_nt.kind) {
      case ELSE:
        jj_consume_token(ELSE);
        switch (jj_nt.kind) {
        case IF:
          ConditionalStatement();
          break;
        case LB:
          Block();
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Condition() throws ParseException {
                  /*@bgen(jjtree) Condition */
  ASTCondition jjtn000 = new ASTCondition(this, JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Operand();
      RelationOperations();
      Operand();
      switch (jj_nt.kind) {
      case AND:
        jj_consume_token(AND);
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void RelationOperations() throws ParseException {
                           /*@bgen(jjtree) RelationOperations */
  ASTRelationOperations jjtn000 = new ASTRelationOperations(this, JJTRELATIONOPERATIONS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch (jj_nt.kind) {
      case 64:
        jj_consume_token(64);
        break;
      case 65:
        jj_consume_token(65);
        break;
      case 66:
        jj_consume_token(66);
        break;
      case 67:
        jj_consume_token(67);
        break;
      case 68:
        jj_consume_token(68);
        break;
      case 69:
        jj_consume_token(69);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Block() throws ParseException {
              /*@bgen(jjtree) Block */
  ASTBlock jjtn000 = new ASTBlock(this, JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LB);
      label_4:
      while (true) {
        switch (jj_nt.kind) {
        case VAR:
        case SWITCH:
        case STRUCT:
        case FOR:
        case IF:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_4;
        }
        Statement();
      }
      jj_consume_token(RB);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void AssignmentStatement() throws ParseException {
                              /*@bgen(jjtree) AssignmentStatement */
  ASTAssignmentStatement jjtn000 = new ASTAssignmentStatement(this, JJTASSIGNMENTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENTIFIER);
      AssignmentOperator();
      Operand();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void InCrement() throws ParseException {
                   /*@bgen(jjtree) InCrement */
  ASTInCrement jjtn000 = new ASTInCrement(this, JJTINCREMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENTIFIER);
      OneOperandOperator();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Operand() throws ParseException {
                 /*@bgen(jjtree) Operand */
  ASTOperand jjtn000 = new ASTOperand(this, JJTOPERAND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch (jj_nt.kind) {
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      case CHARACTER_LITERAL:
        jj_consume_token(CHARACTER_LITERAL);
        break;
      case INTEGER_LITERAL:
        jj_consume_token(INTEGER_LITERAL);
        break;
      case FLOATING_POINT_LITERAL:
        jj_consume_token(FLOATING_POINT_LITERAL);
        break;
      case STRING_LITERAL:
        jj_consume_token(STRING_LITERAL);
        break;
      case TRUE:
        jj_consume_token(TRUE);
        break;
      case FALSE:
        jj_consume_token(FALSE);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void FunctionDeclaration() throws ParseException {
                              /*@bgen(jjtree) FunctionDeclaration */
  ASTFunctionDeclaration jjtn000 = new ASTFunctionDeclaration(this, JJTFUNCTIONDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FUNC);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LP);
      label_5:
      while (true) {
        switch (jj_nt.kind) {
        case COMMA:
        case FLOAT:
        case INT:
        case CHAR:
        case BOOL:
        case STRING:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_5;
        }
        Parameter();
      }
      jj_consume_token(RP);
      ReturnType();
      FunctionBody();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ReturnType() throws ParseException {
                    /*@bgen(jjtree) ReturnType */
  ASTReturnType jjtn000 = new ASTReturnType(this, JJTRETURNTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch (jj_nt.kind) {
      case LP:
        jj_consume_token(LP);
        label_6:
        while (true) {
          Parameter();
          switch (jj_nt.kind) {
          case COMMA:
          case FLOAT:
          case INT:
          case CHAR:
          case BOOL:
          case STRING:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[21] = jj_gen;
            break label_6;
          }
        }
        jj_consume_token(RP);
        break;
      default:
        jj_la1[23] = jj_gen;
        switch (jj_nt.kind) {
        case FLOAT:
        case INT:
        case CHAR:
        case BOOL:
        case STRING:
          type();
          break;
        default:
          jj_la1[22] = jj_gen;
          ;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
